[fix] style char scrollbar

--- a/src/assets/styles/components/ResidentsData.scss
+++ b/src/assets/styles/components/ResidentsData.scss
@@ -8,8 +8,26 @@ ul {
   justify-content: center;
   max-height: 400px;
   overflow: auto;
+  scrollbar-width: thin;
+  scrollbar-color: $scrollbar-characters transparent;
   p.character-data {
     margin: 0px;
     font-size: 20px;
   }
+}
+ul::-webkit-scrollbar {
+  width: 7px;
+}
+
+ul::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+ul::-webkit-scrollbar-thumb {
+  background: $scrollbar-characters;
+  border-radius: 30px;
+}
+
+ul::-webkit-scrollbar-thumb:hover {
+  background: $scrollbar-characters;
 }
