--- a/src/assets/styles/vars/_colors.scss
+++ b/src/assets/styles/vars/_colors.scss
@@ -3,3 +3,4 @@ $dark: #000;
 $title-color: #ff00ff;
 $lightshadow: #d3d3d3;
 $scrollbar: #00ff00;
+$scrollbar-characters: #746952;
